2009-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/ange-ftp.el (ange-ftp-file-size): Use unwind-protect.

2009-10-18  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (compile-last): Ensure GREP_OPTIONS is null before calling
	grep, so that binary files (eg international/uni-bidi.el) can match.
	Remove test for "UnicodeData" files, since it is hopefully unnecessary
	now, and in any case the file header format has changed.

2009-10-17  Glenn Morris  <rgm@gnu.org>

	* textmodes/flyspell.el (flyspell-large-region, flyspell-word)
	(flyspell-get-word, flyspell-large-region)
	(flyspell-auto-correct-previous-word): Doc/error message fixes.

2009-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in (ELCFILES): Add ede/shell.

2009-10-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/common-win.el (x-colors): Purecopy it.

2009-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-data-swapped-p): Make the assertion a bit more
	permissive for when the buffer is empty.
	(tar-header-block-tokenize): Decode the username and groupname.
	(tar-chown-entry, tar-chgrp-entry): Encode the names (bug#4730).

2009-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/srecode/srt.el:
	* cedet/srecode/compile.el:
	* cedet/semantic/mru-bookmark.el:
	* cedet/semantic/debug.el:
	* cedet/semantic/complete.el:
	* cedet/semantic/analyze.el: Require CL when compiling.

2009-10-17  Eric Ludlam  <zappo@gnu.org>

	* cedet/semantic/scope.el
	(semantic-analyze-scoped-inherited-tag-map): Wrap calculation of
	tmpscope so that the regular scope will continue to work.

	* cedet/semantic/idle.el (semantic-idle-tag-highlight):
	Use semantic-idle-summary-highlight-face as the highlighting.

	* emacs-lisp/eieio-base.el (eieio-persistent-save): If buffer
	contains multibyte characters, choose first applicable coding
	system automatically.

	* cedet/ede/project-am.el (project-run-target): New method.
	(project-run-target): New method.
