@@ -1,3 +1,9 @@
+2009-10-18  Aaron S. Hawley  <aaron.s.hawley@gmail.com>
+
+	* textmodes/sgml-mode.el (sgml-tag-help): Prompt user for tag.
+	(html-tag-alist, html-tag-help): Add descriptions for undocumented
+	entries and make note of obsolete tags.
+
 2009-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* net/ange-ftp.el (ange-ftp-file-size): Use unwind-protect.
